@@ -27,6 +27,13 @@ or the ``KSQL_OPTS`` environment variable. Properties set with ``KSQL_OPTS`` tak
 KSQL configuration file. A recommended approach is to configure a common set of properties using the KSQL configuration
 file and override specific properties as needed, using the ``KSQL_OPTS`` environment variable.
 
+.. tip::
+
+   If you deploy |cp| by using Docker containers, you can specify configuration
+   parameters as environment variables to the
+   `KSQL Server image <https://hub.docker.com/r/confluentinc/cp-ksql-server/>`__.
+   For more information, see :ref:`install-ksql-with-docker`.
+
 KSQL Server Configuration File
 ------------------------------
 
@@ -71,6 +78,80 @@ You can specify multiple parameters at the same time. For example, to configure 
 
     $ KSQL_OPTS="-Dksql.streams.auto.offset.reset=earliest -Dksql.streams.num.stream.threads=1" <path-to-confluent>/bin/ksql-server-start \
       <path-to-confluent>/etc/ksql/ksql-server.properties
+
+KSQL Server Runtime Environment Variables
+-----------------------------------------
+
+When KSQL Server starts, it checks for shell environment variables that
+control the host Java Virtual Machine (JVM). Set the following environment
+variables to control options like heap size and Log4j configuration. These
+settings are applied by the `ksql-run-class <https://github.com/confluentinc/ksql/blob/master/bin/ksql-run-class>`__
+shell script when KSQL Server starts.
+
+KSQL_CLASSPATH
+    Path to the Java deployment of KSQL Server and related Java classes. The
+    following command shows an example KSQL_CLASSPATH setting.
+
+    .. code:: bash
+
+       export CLASSPATH=/usr/share/java/my-base/*:/usr/share/java/my-ksql-server/*:/opt/my-company/lib/ksql/*:$CLASSPATH
+       export KSQL_CLASSPATH="${CLASSPATH}"
+
+KSQL_LOG4J_OPTS
+    Specifies KSQL Server logging options by using the Log4j configuration settings.
+    The following example command sets the default Log4j configuration.
+
+    .. code:: bash
+
+       export KSQL_LOG4J_OPTS="-Dlog4j.configuration=file:$KSQL_CONFIG_DIR/log4j-rolling.properties"
+
+    For more information, see `Log4j Configuration <https://logging.apache.org/log4j/2.x/manual/configuration.html>`__.
+
+KSQL_JMX_OPTS
+    Specifies KSQL metrics options by using Java Management Extensions (JMX).
+    The following example command sets the default JMX configuration.
+
+    .. code:: bash
+
+       export KSQL_JMX_OPTS="-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false "
+
+    For more information, see `Monitoring and Management Using JMX Technology <https://docs.oracle.com/en/java/javase/11/management/monitoring-and-management-using-jmx-technology.html>`__.
+
+KSQL_HEAP_OPTS
+    Specifies the initial size and maximum size of the JVM heap for the KSQL
+    Server process. The following example command sets the initial size and
+    maximum size to 15GB.
+
+    .. code:: bash
+
+       export KSQL_HEAP_OPTS="-Xms15G -Xmx15G"
+
+    For more information, see `JRockit JVM Heap Size Options <https://docs.oracle.com/cd/E15523_01/web.1111/e13814/jvm_tuning.htm#PERFM161>`__.
+
+KSQL_JVM_PERFORMANCE_OPTS
+    Specifies performance tuning options for the JVM that runs KSQL Server.
+    The following example command sets the default JVM configuration.
+
+    .. code:: bash
+
+       export KSQL_JVM_PERFORMANCE_OPTS="-server -XX:+UseConcMarkSweepGC -XX:+CMSClassUnload ingEnabled -XX:+CMSScavengeBeforeRemark -XX:+ExplicitGCInvokesConcurrent -XX:New Ratio=1 -Djava.awt.headless=true"
+
+    For more information, see
+    `D Command-Line Options <https://docs.oracle.com/en/java/javase/11/troubleshoot/command-line-options1.html>`__.
+
+JMX_PORT
+    Specifies the port that JMX uses to report metrics. 
+
+    .. code:: bash
+
+       export JMX_PORT=1099 
+
+JAVA_HOME
+    Specifies the location of the ``java`` executable file.
+
+    .. code:: bash
+
+       export JAVA_HOME=<jdk-install-directory>
 
 -----------
 JMX Metrics
